profilelist1exp/unpackaged/objects/SOM_Boomi_Log__c.object
<CustomObject>
    <description>SOM R14.10 - Data in this object are populated from SFDC via trigger. Records in this object are fetching by Boomi and update into existing Changepoint project
Help Settings - Standard salesforce.com Help Window</description>
    <fields>
        <fullName>Affinity_Account_ID__c</fullName>
        <label>Affinity Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_ID__c</fullName>
        <label>Deal ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Date_Time__c</fullName>
        <description>SOM R14.10 - Date/Time of Error receive by SFDC</description>
        <label>Error Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Date_Time__c</fullName>
        <label>Message Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Message_ID__c</fullName>
        <label>Message ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Email__c</fullName>
        <description>SOM R14.10 - Opportunity Owner Email of the Opportunity with changes</description>
        <formula>Opportunity_Owner__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Name__c</fullName>
        <description>SOM R14.10 - Opportunity Owner Name of the Opportunity with changes</description>
        <formula>Opportunity_Owner__r.FirstName + &apos; &apos;+ Opportunity_Owner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SOM_Boomi_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <description>Created for CR 12116 - Story 198906:[Proj Mgmt] Update Changepoint when Opportunity is Lost</description>
        <label>Opportunity Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_CE_Email__c</fullName>
        <label>Primary CE Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Primary_CE_Name__c</fullName>
        <label>Primary CE Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_Sales_Owner_Email__c</fullName>
        <description>SOM R14.10 - Services Sales Owner Email of the Opportunity with changes</description>
        <formula>Services_Sales_Owner__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Services Sales Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_Sales_Owner_Name__c</fullName>
        <description>SOM R14.10 -Services Sales Owner Name of the Opportunity with changes</description>
        <formula>Services_Sales_Owner__r.FirstName +&apos; &apos;+ Services_Sales_Owner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Services Sales Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_Sales_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Services Sales Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SOM_Boomi_Log1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SOM Boomi Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Deal_ID__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>Message_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Log Id-{000000}</displayFormat>
        <label>Log Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SOM Boomi Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>